@@ -1,3 +1,4 @@
+* Fill statement name with a sequence
 * Add manual validation on statement
 
 Version 1.2 - 2014-07-01
